tests/baselines/reference/functionOverloads.errors.txt
==== tests/cases/compiler/functionOverloads.ts (2 errors) ====
    function foo(): string;
    function foo(bar: string): number;
    function foo(bar?: string): any { return "" };
    var x = foo(5);
            ~~~
!!! functionOverloads.ts(4,9): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'number'.
            ~~~
!!! functionOverloads.ts(4,9): error TS2087: Could not select overload for 'call' expression.